# acf-inc-ref

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
doc/: CMakeLists.txt  Doxyfile.in
include/acf/: std_type_traits.h
include/acf/ref/: bean_traits.h  type_traits.h
include/acf/ref/bits/: preprocessor.hpp  type_traits.hpp
include/ref/: bean_stream.h  bean_traits.h  member_watch.h
include/ref/bits/: fwd.h  index.h  name_of.h  name_of_impl.h  preprocessor.h  std_type_traits.h  type_traits.h
test/: CMakeLists.txt
test/assertion/: Beans.cpp  Beans.h  CMakeLists.txt  assertion_test.h  main.cpp
test/use_case/: Beans.h  CMakeLists.txt  main.cpp
